Cherry Trail DSI no or black Display
This issue's former title "LPSS PWM backlight control failure" was just my guess which part seemed responsible. X11/Xorg is affected as well as Wayland/wlroots.
Booting using systemd-boot the display stays black after the bootloader's menu.
Booting using kernel's efi-stub the display comes on until dpms backlight off, then stays off.
- CPU with IGP: Atom x7-Z8750 (Cherry Trail)
- System Architecture: x86_64
- Distribution: Arch Linux
- Machine: GPD Pocket 1
- Display Connector: DSI
- Backlight Control: pwm_lpss_platform
- Kernel Version: 5.18.9-arch1-1 (good)
- Kernel Version: 5.19.3.arch1-1 (bad)
- Kernel Version: 6.0rc1-1 miffe (bad)
dmesg_lpss_5.18.9.txt dmesg_lpss_6.0rc1.txt
Thanks for your work :)
- Show closed items
Activity
-
Newest first Oldest first
-
Show all activity Show comments only Show history only
- Developer
Not seeing any obvious changes in the logs. Can you bisect?
- Ville Syrjälä added feature: display/DSI platform: BSW/CHT labels
added feature: display/DSI platform: BSW/CHT labels
- Author
Thanks for your attention.
I'm still in the process of building drm-tip from the AUR git package. Still reluctant to establish a CI compiling rig :D
From skimming older issues I got the impression it may be related to Matebook no display so VBT DSI sequence trouble?
- Author
Full kernel build takes five hours...
- Kernel Version: 6.0.0-rc2-1-drm-tip-git-g1de33826aa86 (also bad)
Edited by JackCasual - Author
Started bisecting upstream using archlinux-mainline. Running localmodconfig brings time down to 48 minutes.
Following tagged commits from https://git.kernel.org/pub/scm/linux/kernel/git/torvalds/linux.git#tag=
- v5.18 good
- v5.19-rc1 BAD
- v5.19-rc2 ?
- v5.19-rc3 ?
- v5.19-rc4 BAD
- v5.19-rc5 ?
- v5.19-rc6 ?
- v5.19-rc7 ?
- v5.19-rc8 ?
- v5.19 BAD
@vsyrjala Do I have to get down to single commits and on which tree if not Torvald's?
Collapse replies - Developer
Yes, an actual git bisect is probably the fastest way to get at it.
$ git bisect start v5.19-rc1 v5.18 Bisecting: 7030 revisions left to test after this (roughly 13 steps)
So not too bad even w/o limiting the path.
Looking at that archlinux-mainline PKGBUILD does it not do a parallel build at all (at least can't see it passing -j to make)? That would certainly explain why building is so slow. Either that or you're building on some really slow machine.
Edited by Ville Syrjälä
- JackCasual changed title from Cherry Trail LPSS PWM backlight control failure to Cherry Trail DSI no or black Display
changed title from Cherry Trail LPSS PWM backlight control failure to Cherry Trail DSI no or black Display
- JackCasual changed the description
changed the description
- Author
After taking the twelve ehm 15 step program :D
$ git bisect log
- bad: [f2906aa863381afb0015a9eb7fefad885d4e5a56] Linux 5.19-rc1
- good: [4b0986a3613c92f4ec1bdc7f60ec66fea135991f] Linux 5.18
- git bisect start 'f2906aa863381afb0015a9eb7fefad885d4e5a56' '4b0986a3613c92f4ec1bdc7f60ec66fea135991f'
- bad: [2518f226c60d8e04d18ba4295500a5b0b8ac7659] Merge tag 'drm-next-2022-05-25' of git://anongit.freedesktop.org/drm/drm
- git bisect bad 2518f226c60d8e04d18ba4295500a5b0b8ac7659
- good: [5d1772b1739b085721431eef0c0400f3aff01abf] Merge branch 'for-5.19' of git://git.kernel.org/pub/scm/linux/kernel/git/tj/wq
- git bisect good 5d1772b1739b085721431eef0c0400f3aff01abf
- good: [57d7becda9c9e612e6b00676f2eecfac3e719e88] Merge branch 'ptp-ocp-various-updates'
- git bisect good 57d7becda9c9e612e6b00676f2eecfac3e719e88
- bad: [6071c4c2a319da360b0bf2bc397d4fefad10b2c8] drm/qxl: add drm_gem_plane_helper_prepare_fb
- git bisect bad 6071c4c2a319da360b0bf2bc397d4fefad10b2c8
- bad: [c54b39a565227538c52ead2349eb17d54aadd6f7] Merge tag 'drm-intel-next-2022-04-13-1' of git://anongit.freedesktop.org/drm/drm-intel into drm-next
- git bisect bad c54b39a565227538c52ead2349eb17d54aadd6f7
- good: [c8d4c18bfbc4ab467188dbe45cc8155759f49d9e] dma-buf/drivers: make reserving a shared slot mandatory v4 git bisect good c8d4c18bfbc4ab467188dbe45cc8155759f49d9e
- good: [0438fd1aa69cb97dffa4c4285b1a330e46ef8832] drm/i915: move i915_gem_object_needs_bit17_swizzle() to i915_gem_tiling.[ch]
- git bisect good 0438fd1aa69cb97dffa4c4285b1a330e46ef8832
- good: [1c05183a3709fbef6aea66cd50002e718aec2e95] drm/i915: Extract intel_edp_has_drrs()
- git bisect good 1c05183a3709fbef6aea66cd50002e718aec2e95
- good: [805f04d42a6b5f4187935b43c9c39ae03ccfa761] drm/i915/display/psr: Use continuos full frame to handle frontbuffer invalidations
- git bisect good 805f04d42a6b5f4187935b43c9c39ae03ccfa761
- bad: [58b2e3829ec6558d6d0edf709579b82550ecea61] drm/i915/bios: Trust the LFP data pointers
- git bisect bad 58b2e3829ec6558d6d0edf709579b82550ecea61
- good: [9e0a1c3c3fcbf9d819d1ee584e43c87318772fdc] drm/i915: Fix skl_pcode_try_request function
- git bisect good 9e0a1c3c3fcbf9d819d1ee584e43c87318772fdc
- good: [d58a3d699797a59dae53542b20e2f03ba3f05036] drm/i915/bios: Use the cached BDB version
- git bisect good d58a3d699797a59dae53542b20e2f03ba3f05036
- bad: [918f3025960f72b6551a229af68e1c596f1a5e9f] drm/i915/bios: Use the copy of the LFP data table always
- git bisect bad 918f3025960f72b6551a229af68e1c596f1a5e9f
- bad: [e163cfb4c96d022b93ab0006ab306de50b6d7c6b] drm/i915/bios: Make copies of VBT data blocks
- git bisect bad e163cfb4c96d022b93ab0006ab306de50b6d7c6b
- first bad commit: [e163cfb4c96d022b93ab0006ab306de50b6d7c6b] drm/i915/bios: Make copies of VBT data blocks
e163cfb4c96d022b93ab0006ab306de50b6d7c6b is the first bad commit
- commit e163cfb4c96d022b93ab0006ab306de50b6d7c6b
- Author: Ville Syrjälä ville.syrjala@linux.intel.com
- Date: Wed Apr 6 16:38:17 2022 +0300
- drm/i915/bios: Make copies of VBT data blocks
@vsyrjala Arch's makepkg has a global /etc/makepkg.conf for MAKEFLAGS like -j4 :)
Collapse replies - Developer
Thanks.
A slightly surprising result, but looks like I found the explanation for the failure: 0001-drm-i915-bios-Copy-the-whole-MIPI-sequence-block.patch
- Author
Applied the patch onto Linux 6.0-rc3 and it works like a charm.
I am much obliged to you.
Do I keep this issue open until inclusion into the kernel?
Collapse replies - Developer
I will close the bug when I merge the patch into the drm-intel tree.
- Developer
Fixed with
commit a06289f3f72431f3777af95ea1226b5b0abdc426 Author: Ville Syrjälä <ville.syrjala@linux.intel.com> Date: Mon Aug 29 16:58:34 2022 +0300 drm/i915/bios: Copy the whole MIPI sequence block
Thanks for the bug report and bisection.
- Ville Syrjälä closed
closed
- Ville Syrjälä mentioned in commit nouveau@edca5a2c
mentioned in commit nouveau@edca5a2c